replace mayadevi temple image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hamburger__close">
           <img src="/images/close-line.svg" alt="">
         </div>
-        <div class="logo">logo</div>
+        <div class="logo">trekNepal</div>
         <ul>
           <li><a href="#section1">Home</a></li>
           <li><a href="#section2">History</a></li>
@@ -28,7 +28,7 @@
         </ul>
       </div>
       <div class="page1__desktop__nav">
-        <div class="logo">logo</div>
+        <div class="logo">trekNepal</div>
         <ul>
           <li><a href="#section1">Home</a></li>
           <li><a href="#section2">History</a></li>
@@ -148,7 +148,7 @@
       </div>
       <div class="page5__secondbox">
         <div class="page5__secondbox__innerbox">
-          <img src="./images/mayadevitemple1.webp" alt="" />
+          <img src="./images/mayadevi.webp" alt="" />
           <h1>mayadevi temple</h1>
           <p>
             The Mayadevi Temple, located in Lumbini, Nepal, is a sacred Buddhist site dedicated to Maya Devi, the mother
