--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.4.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
@@ -13,11 +14,11 @@
   <div class="main">
     <section class="page1">
       <div class="hamburger__open">
-        <img src="/images/menuopen.svg" alt="">
+        <i class="ri-menu-line"></i>
       </div>
       <div class="page1__mobile__nav">
         <div class="hamburger__close">
-          <img src="/images/close-line.svg" alt="">
+          <i class="ri-close-large-line"></i>
         </div>
         <div class="logo">trekNepal</div>
         <ul>
